roles/servers/files/10.32.10.104/iptables
# Generated by iptables-save v1.4.7 on Fri Aug 12 13:30:28 2016
*filter
:INPUT DROP [4545492777:1095542334831]
:FORWARD DROP [0:0]
:OUTPUT DROP [4358870477:1717741849078]
:LOGGING - [0:0]
##################################### INPUT RULES ############################################

########################################## Mandatory ##########################################    
## Allow from loopback
-A INPUT -i lo -j ACCEPT

## Allow input that the output has been established
-A INPUT -m state --state ESTABLISHED -j ACCEPT

## Allow ICMP packets
#-A INPUT -p icmp --icmp-type 11 -j ACCEPT
#-A INPUT -p icmp --icmp-type 8 -s 192.168.250.0/24 -m state --state NEW,ESTABLISHED,RELATED -j ACCEPT
-A INPUT -p icmp -j ACCEPT
###############################################################################################

#-A INPUT -m conntrack --ctstate ESTABLISHED,RELATED -j ACCEPT

## Allow SSH Access from Admin VLAN and Monitoring Server
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.180 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SSH Acess from dev-manager
-A INPUT -s 10.32.14.50 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SSH Access from arun
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

#allow from 10.32.6.242 -- March 10th, 2015 --MULYADI--
-A INPUT -s 10.32.6.242 -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow temporary MySQL access from db.alpha.ams
-A INPUT -s db2.alpha.ams -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SMS Status Updates from waigama/majapahit
-A INPUT -s 10.32.10.8 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.25 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.100.18 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow SNMP from Monitoring Server
-A INPUT -s 10.32.16.179 -p udp -m udp --dport 161 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.16.179 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow MySQL Access From Jethro Workstation Both Wifi and Cable
-A INPUT -s 10.32.14.82 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.83 -p tcp -m tcp --dport 3306 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Monit Access from Admin VLAN
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 2812 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow http/s Access from any
-A INPUT -p tcp -m multiport --dport 80,443,8080,8443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow webservice Access from VPN
-A INPUT -s 192.168.250.2 -p tcp --dport 9876 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow http/s OMA Access from any
-A INPUT -s 10.32.5.0/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.6.3/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 10.32.14.0/255.255.255.0 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT
-A INPUT -s 192.168.4.1/255.255.255.255 -p tcp -m tcp --dport 5050 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow WSREP galera from demox and garbd
-A INPUT -s 10.32.10.85 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.80 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.104 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.106 -p tcp -m tcp -j ACCEPT
-A INPUT -s 10.32.10.17 -p tcp -m tcp -j ACCEPT

## Log the rest
-A INPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Incoming Dropped: " --log-level 5
-A LOGGING -j DROP

###################################### OUTPUT RULES ############################################

########################################## Mandatory ###########################################    
## Allow output from loopback
-A OUTPUT -o lo -j ACCEPT 

## Allow output that the input has been established
-A OUTPUT -o eth0 -p tcp -m state --state ESTABLISHED -j ACCEPT 
-A OUTPUT -o eth0 -p udp -m state --state ESTABLISHED -j ACCEPT 

## Allow ping outside
-A OUTPUT -p icmp -j ACCEPT
################################################################################################

## Allow output to smtp relay smtp(tcp/25)
-A OUTPUT -d 10.32.10.11 -p tcp -m tcp --dport 25 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to cell db provider http(tcp/80) and https(tcp/443)
-A OUTPUT -d location-api.com -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d www.google.com -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to ismsc service http(tcp/80) and https(tcp/443)
-A OUTPUT -d 80.66.224.224/255.255.255.248 -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A OUTPUT -d 10.32.6.59 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT
#-A OUTPUT -d 10.32.9.141 -p tcp -m tcp --dport 80 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to service hosts for service domain(tcp/53), ntp(tcp/123), http(tcp/80), and https(tcp/443)
-A OUTPUT -d 10.32.10.52 -p udp -m multiport --dports 53,123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.10.53 -p udp -m multiport --dports 53,123 -m state --state NEW,ESTABLISHED -j ACCEPT
-A OUTPUT -d 10.32.15.190 -p tcp -m multiport --dports 80,443 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow output to queue latin(tcp/22021) and unicode(tcp/22022) of queue server
-A OUTPUT -d 10.32.10.200 -p tcp -m multiport --dports 22021,22022 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow WSREP galera to demox and garbd
-A OUTPUT -d 10.32.10.85 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 10.32.10.80 -p tcp -m tcp -j ACCEPT
#-A OUTPUT -d 10.32.10.104 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 10.32.10.106 -p tcp -m tcp -j ACCEPT
-A OUTPUT -d 10.32.10.17 -p tcp -m tcp -j ACCEPT

## Allow connection to dev.alpha.ams
-A OUTPUT -d db2.alpha.ams -p tcp -m tcp --dport 3306 -j ACCEPT
-A OUTPUT -d app.alpha.ams -p tcp -m tcp --dport 5672 -j ACCEPT
-A OUTPUT -d app.alpha.ams -p tcp -m tcp --dport 6379 -j ACCEPT

## Allow ssh tunnel to iSMSC3
-A OUTPUT -d li-ismsc3.1rstwap.com -p tcp -m tcp --dport 22 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Send Logs to Syslog Server
-A OUTPUT -d syslog.1rstwap.com -p tcp -m tcp --dport 11 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Send Application Logs to Syslog Server
-A OUTPUT -d syslog.1rstwap.com -p tcp -m multiport --dports 20526:20543 -m state --state NEW,ESTABLISHED -j ACCEPT

## Allow Ping to Datamobile Server
-A OUTPUT -d 192.168.250.2 -j ACCEPT

## Loggin the rest
-A OUTPUT -j LOGGING
-A LOGGING -m limit --limit 5/min -j LOG --log-prefix "Outgoing Dropped: " --log-level 5
-A LOGGING -j DROP

## Must commit


COMMIT
# Completed on Fri Aug 12 13:30:28 2016
# Generated by iptables-save v1.4.7 on Fri Aug 12 13:30:28 2016
*nat
:PREROUTING ACCEPT [1387723:115855668]
:POSTROUTING ACCEPT [6645441:406122895]
:OUTPUT ACCEPT [6625967:404954455]
-A PREROUTING -d 10.32.10.105/32 -p tcp -m tcp --dport 443 -j DNAT --to-destination 10.32.10.104:8443 
-A PREROUTING -d 10.32.10.105/32 -p tcp -m tcp --dport 80 -j DNAT --to-destination 10.32.10.104:8080 
-A OUTPUT -d 10.32.10.105/32 -p tcp -m tcp --dport 443 -j REDIRECT --to-ports 8443 
-A OUTPUT -d 10.32.10.105/32 -p tcp -m tcp --dport 80 -j REDIRECT --to-ports 8080 
COMMIT
# Completed on Fri Aug 12 13:30:28 2016
